# pystock

./: .gitignore  LICENSE  README.md  pyproject.toml  pystock  pystock.py  requirements.txt
doc/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  PUBLICATION_CHECKLIST.md
src/pystock/: __init__.py  main.py
