[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pystock"
version = "1.0.0"
description = "Predict stock closing prices using LSTM neural networks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["stock", "prediction", "lstm", "neural-network", "deep-learning", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "pandas-datareader>=0.10.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.10.0",
    "keras>=2.10.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=4.0",
    "pylint>=2.0",
]

[project.urls]
Homepage = "https://github.com/eddinho/pystock"
Documentation = "https://github.com/eddinho/pystock#readme"
Repository = "https://github.com/eddinho/pystock.git"
Issues = "https://github.com/eddinho/pystock/issues"

[project.scripts]
pystock = "pystock.main:main"

[tool.setuptools]
packages = ["pystock"]

[tool.setuptools.package-dir]
"" = "src"
